# led-localization

./: .gitignore~  CMakeLists.txt  CMakeLists.txt~  README.md  manifest.xml  package.xml  package.xml~
msg/: beacons.msg
scripts/: bright.py  cvbridge.py  led_finder.py
src/: opencv_blackfly.cpp
